cargo-features = ["codegen-backend"]

[package]
name = "defender"
version = "0.1.0"
edition = "2024"

[profile.dev.package."*"]
opt-level = 0
debug = 0
incremental = true
codegen-units = 32
codegen-backend = "llvm"

[profile.dev]
codegen-backend = "cranelift"
opt-level = 1
debug = 1
codegen-units = 16
lto = "off"

[dependencies]
bevy = { version = "0.17.3", features = ["dynamic_linking"] }
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
rand = "0.9.2"
